BJ-775: (epic) Delete xmx parameter from Dockerfile.

--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER @project.maintainer@
 
 COPY @artifactId@-@version@.jar /opt/@artifactId@/@artifactId@.jar
 
-CMD ["java", "-Xmx256m", "-jar","/opt/@artifactId@/@artifactId@.jar"]
+CMD ["java", "-jar", "/opt/@artifactId@/@artifactId@.jar"]
 
 EXPOSE @exposed.ports@
 
