--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,15 @@
 
     <groupId>com.rbkmoney</groupId>
     <artifactId>shared-resources</artifactId>
-    <version>0.3.6</version>
+    <version>0.3.7-epic</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>8</java.version>
+        <dockerfile.base.service.tag>bc95d0d6dc13c693acd2b274531a7d604b877bf3</dockerfile.base.service.tag>
+        <dockerfile.registry>${env.REGISTRY}</dockerfile.registry>
+    </properties>
 
     <dependencies>
         <dependency>
