--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.rbkmoney</groupId>
     <artifactId>shared-resources</artifactId>
-    <version>0.3.7-xmx-epic</version>
+    <version>0.3.7-epic</version>
     <packaging>jar</packaging>
 
     <properties>
