--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <parent>
         <groupId>com.rbkmoney</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.1</version>
+        <artifactId>parent_test</artifactId>
+        <version>2.0.9</version>
     </parent>
 
     <groupId>com.rbkmoney</groupId>
-    <artifactId>shared-resources</artifactId>
+    <artifactId>shared-resources_test</artifactId>
     <version>0.3.6</version>
     <packaging>jar</packaging>
 
