Change base image

--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -1,5 +1,5 @@
 # @dockerfile.Template@
-FROM @dockerfile.registry@/rbkmoney/service-java:@dockerfile.base.service.tag@
+FROM @dockerfile.registry@/rbkmoney/jdk-base-image:@dockerfile.base.service.tag@
 MAINTAINER @project.maintainer@
 
 COPY @artifactId@-@version@.jar /opt/@artifactId@/@artifactId@.jar
