--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>2.3.1.RELEASE</version>
+            <version>2.6.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
