--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "build_utils"]
 	path = build_utils
-	url = git@github.com:rbkmoney/build_utils.git
-	branch = master
+	url = https://github.com/rbkmoney/build_utils
+	branch = ft/publish-java-parent
